pkl-core/src/test/files/LanguageSnippetTests/output/errors/reference29.pcf
res0 = ""
res1 = "parent"
res2 = "parent.parent"
res3 = "children.0"
res4 = "children.0.parent"
res5 = "children.0.children.0"
